# my_home_assistant

./: .gitignore  HA_api_session.py  HA_bot.py  HA_rest_api.py  HA_schemas.py  HA_templates.py  README.md  agent_prompt.txt  linux_HA_mcp.json  pyproject.toml  pytest.ini  win_HA_mcp.json
.github/workflows/: local-deploy.yml
custom_api/: __init__.py  base.py  retrieval.py  service.py  templates.py
helpers/: __init__.py  analytics.py  search.py
schemas/: __init__.py  base.py  entity.py  history.py  state.py
src/ha_mcp_bot/: __init__.py  config.py  main.py
src/ha_mcp_bot/api/: __init__.py  api.py  base.py  client.py  config.py  custom_api.py  retrieval.py  service.py  templates.py
src/ha_mcp_bot/helpers/: __init__.py  analytics.py  search.py  tokenization.py
src/ha_mcp_bot/schemas/: __init__.py  entity.py  history.py  state.py
src/ha_mcp_bot/tests/: test_client.py  test_retrieval_service.py
src/ha_mcp_bot/tools/: __init__.py  action.py  groups.py  lookup.py  search.py  trends.py
