[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-mcp-bot"
version = "0.1.0"
dependencies = [
    "mcp[server]",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "requests",
]

[project.scripts]
ha-mcp = "ha_mcp_bot.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
