[project]
name = "my-home-assistant-mcp-server"
version = "0.1.0"
description = "HA MCP Server built on custom HA API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
ha-mcp = "ha_mcp_bot.main:main"
ha-mcp-dev = "ha_mcp_bot.main:dev_run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]